set(LIB nativefiledialog)
set(SRCS common.h nfd_common.h nfd_common.c nfd.h)

set(EXTRA_INCLUDE_DIRS)
set(EXTRA_LIBRARIES)

if (APPLE)
	set(SRCS ${SRCS} nfd_cocoa.m)
#	set(EXTRA_LIBRARIES ${EXTRA_LIBRARIES} AppKit)
endif()

if (MSVC)
	set(SRCS ${SRCS} nfd_win.cpp)
endif()

set(QT FALSE)
if (LINUX)
	find_package(Qt5Widgets)
	if (${Qt5Widgets_FOUND})
		set(SRCS ${SRCS} nfd_qt.cpp)
		set(QT TRUE)
	else()
		pkg_check_modules(GTK3 gtk+-3.0)
		if (GTK3_FOUND)
			link_directories(${GTK3_LIBRARY_DIRS})
			add_definitions(${GTK3_CFLAGS_OTHER})
			set(SRCS ${SRCS} nfd_gtk.c)
			set(EXTRA_INCLUDE_DIRS "${EXTRA_INCLUDE_DIRS} ${GTK3_INCLUDE_DIRS}")
			set(EXTRA_LIBRARIES "${EXTRA_LIBRARIES} ${GTK3_LIBRARIES}")
		else()
			find_program(ZENITY zenity)
			if(ZENITY)
				set(SRCS ${SRCS} nfd_zenity.c)
			else()
				message(FATAL "Could not find any working dialog")
			endif()
		endif()
	endif()
endif()

engine_add_library(
	LIB ${LIB}
	SRCS ${SRCS}
)

if (QT)
	qt5_use_modules(${LIB} Widgets)
endif()

if (EXTRA_INCLUDE_DIRS)
	target_include_directories(${LIB} PRIVATE ${EXTRA_INCLUDE_DIRS})
endif()
if (EXTRA_LIBRARIES)
	target_link_libraries(${LIB} ${EXTRA_LIBRARIES})
endif()
