set(SRCS connection.cc helpers.cc restclient.cc)
set(LIB restclient-cpp)
engine_add_library(LIB ${LIB} SRCS ${SRCS})
target_link_libraries(${LIB} libcurl)
target_include_directories(${LIB} PRIVATE ${LIBCURL_INCLUDE_DIRS} .)
if (NOT MSVC)
	set_target_properties(${LIB} PROPERTIES COMPILE_FLAGS "-Wno-reorder")
endif()
